# socks5-chain-proxy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conf.ini
.github/workflows/: ci.yml
app/: main.c
packaging/: proxy-chain.conf.example  proxy-chain.service
src/: config.c  config.h  event_loop.c  event_loop.h  event_loop_traits.h  event_loop_win.c  logger.c  logger.h  logger_traits.h  queue.c  queue.h  queue_traits.h  socks5_proxy.c  socks5_proxy.h  socks5_traits.h  thread_event_loop.c  thread_event_loop.h  vector.c  vector.h  vector_traits.h
tests/: CMakeLists.txt  test_config.c  test_event_loop.c  test_logger.c  test_queue.c  test_socks5.c  test_thread_event_loop.c  test_vector.c
